--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0"
 bitcode = "0.4"
 bytes = "1.5"
+enum_dispatch = "0.3"
 rand = "0.8"
 ringbuffer = "0.15"
 serde = { version = "1.0.188", features = ["derive"] }
