start adding registry

--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -14,5 +14,7 @@ rand = "0.8"
 ringbuffer = "0.15"
 serde = { version = "1.0.188", features = ["derive"] }
 
+lightyear_derive = {path = "../derive"}
+
 [dev-dependencies]
 mock_instant = "0.3"
