--- a/shared/derive/Cargo.toml
+++ b/shared/derive/Cargo.toml
@@ -14,6 +14,6 @@ quote = "1.0"
 syn = "2.0"
 
 [dev-dependencies]
-lightyear_shared =  { path = "../shared"}
+lightyear_shared =  { path = ".." }
 
 
