switch to netcode 2

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 lightyear_shared = { path = "../shared" }
+log = "0.4.20"
 
 [dev-dependencies]
 mock_instant = "0.3"
