--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 lightyear_shared = { path = "../shared" }
+renetcode = "0.0.9"
 
 [dev-dependencies]
 mock_instant = "0.3"
