--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [workspace]
 resolver = "2"
 members = [
+    "bevy/client",
+    "bevy/server",
+    "bevy/shared",
     "client",
     "shared/derive",
     "shared/serde",
