--- a/bevy/server/Cargo.toml
+++ b/bevy/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lightyear_server"
+name = "lightyear_bevy_server"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,9 +7,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-lightyear_shared = { path = "../shared" }
-crossbeam-channel = "0.5.8"
+lightyear_shared = { path = "../../shared" }
+lightyear_server = { path = "../../server" }
+lightyear_bevy_shared = {path = "../shared"}
 log = "0.4.20"
+bevy_app = { version = "0.11", default-features = false}
 bevy_ecs = { version = "0.11", default-features = false}
 
 [dev-dependencies]
