--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -21,6 +21,8 @@ rand = "0.8"
 ringbuffer = "0.15"
 serde = { version = "1.0.188", features = ["derive"] }
 bevy_ecs = { version = "0.11", default-features = false }
+paste = "1.0"
+enum-kinds = "0.5"
 
 tracing = "0.1"
 
