--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 anyhow = "1.0"
 lightyear_shared = { path = "../shared" }
 log = "0.4.20"
+bevy_app = { version = "0.11", default-features = false}
+bevy_ecs = { version = "0.11", default-features = false}
 
 [dev-dependencies]
 mock_instant = "0.3"
