--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -17,3 +17,4 @@ anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
 tracing-subscriber = "0.3.17"
 log = "0.4.20"
+bevy_ecs = { version = "0.11", default-features = false }
