--- a/shared/derive/Cargo.toml
+++ b/shared/derive/Cargo.toml
@@ -9,21 +9,22 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-enum-as-inner = "0.6.0"
 proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "2.0", features = ["full"]}
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = "1.0.75"
-enum-kinds = "0.5"
-enum_dispatch = "0.3"
-enum_delegate = "0.2"
+darling = "0.20"
 
 
 
 [dev-dependencies]
-lightyear_shared =  { path = ".." }
+lightyear_shared=  { path = ".." }
+enum-as-inner = "0.6.0"
 bevy_ecs = { version = "0.11", default-features = false}
+bevy = { version = "0.11", default-features = false}
+enum-kinds = "0.5"
+enum_delegate = "0.2"
 
 
 
