--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -3,6 +3,9 @@ name = "lightyear_shared"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+debug = []
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -23,7 +26,6 @@ serde = { version = "1.0.188", features = ["derive"] }
 bevy_app = { version = "0.11", default-features = false }
 bevy_ecs = { version = "0.11", default-features = false }
 paste = "1.0"
-enum-kinds = "0.5"
 enum_delegate = "0.2"
 
 tracing = "0.1"
