tests pass. Add test for into_iter_message

--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -23,10 +23,10 @@ enum_dispatch = "0.3"
 rand = "0.8"
 ringbuffer = "0.15"
 serde = { version = "1.0.188", features = ["derive"] }
-bevy_app = { version = "0.11", default-features = false }
-bevy_ecs = { version = "0.11", default-features = false }
+bevy = { version = "0.11", default-features = false }
 paste = "1.0"
 enum_delegate = "0.2"
+enum-as-inner = "0.6.0"
 
 tracing = "0.1"
 
