--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,9 +9,7 @@ edition = "2021"
 anyhow = "1.0"
 lightyear_shared = { path = "../shared" }
 tracing = "0.1.39"
-bevy_app = { version = "0.11", default-features = false}
-bevy_ecs = { version = "0.11", default-features = false}
-bevy_time = { version = "0.11", default-features = false}
+bevy = { version = "0.11", default-features = false}
 
 [dev-dependencies]
 mock_instant = "0.3"
