--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,9 +10,7 @@ anyhow = "1.0"
 lightyear_shared = { path = "../shared" }
 crossbeam-channel = "0.5.8"
 tracing = "0.1.39"
-bevy_app = { version = "0.11", default-features = false}
-bevy_ecs = { version = "0.11", default-features = false}
-bevy_time = { version = "0.11", default-features = false}
+bevy = { version = "0.11", default-features = false}
 
 [dev-dependencies]
 mock_instant = "0.3"
