--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -13,6 +13,9 @@ name = "bevy_simple"
 [[test]]
 name = "bevy_headless"
 
+[[test]]
+name = "connection_soak"
+
 [dependencies]
 lightyear_client = { path = "../client" }
 lightyear_server = { path = "../server" }
@@ -24,6 +27,8 @@ tracing = "0.1"
 tracing-subscriber = "0.3.17"
 log = "0.4.20"
 bevy = { version = "0.11", features = ["bevy_core_pipeline"] }
+rand = "0.8.5"
 
 [dev-dependencies]
 clap = { version = "4.4", features = ["derive"] }
+rand = "0.8"
