--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,12 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+metrics = ["lightyear_shared/metrics", "dep:metrics"]
 
 [dependencies]
 anyhow = "1.0"
 lightyear_shared = { path = "../shared" }
 tracing = "0.1.39"
 bevy = { version = "0.11", default-features = false}
+metrics = { version = "0.21", optional = true }
 
 [dev-dependencies]
 mock_instant = "0.3"
