--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -16,6 +16,9 @@ name = "bevy_headless"
 [[test]]
 name = "connection_soak"
 
+[features]
+metrics = ["lightyear_client/metrics", "lightyear_server/metrics", "lightyear_shared/metrics", "dep:metrics-exporter-prometheus"]
+
 [dependencies]
 lightyear_client = { path = "../client" }
 lightyear_server = { path = "../server" }
@@ -28,6 +31,8 @@ tracing-subscriber = "0.3.17"
 log = "0.4.20"
 bevy = { version = "0.11", features = ["bevy_core_pipeline"] }
 rand = "0.8.5"
+
+metrics-exporter-prometheus = {  version = "0.12.1", optional = true }
 
 [dev-dependencies]
 clap = { version = "4.4", features = ["derive"] }
