--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,6 +13,7 @@ lightyear_shared = { path = "../shared" }
 tracing = "0.1.39"
 bevy = { version = "0.12", default-features = false}
 metrics = { version = "0.21", optional = true }
+chrono = "0.4.31"
 
 [dev-dependencies]
 mock_instant = "0.3"
