--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -42,6 +42,7 @@ tracing = "0.1"
 lightyear_derive = {path = "derive" }
 thiserror = "1.0.49"
 byteorder = "1.5.0"
+chrono = "0.4.31"
 
 [dev-dependencies]
 mock_instant = "0.3"
