--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [features]
 debug = []
 metrics = ["dep:metrics", "metrics-util", "metrics-tracing-context", "metrics-exporter-prometheus", "tokio"]
+mock_time = ["mock_instant"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -43,6 +44,8 @@ lightyear_derive = {path = "derive" }
 thiserror = "1.0.49"
 byteorder = "1.5.0"
 chrono = "0.4.31"
+
+mock_instant = { version = "0.3", optional = true }
 
 [dev-dependencies]
 mock_instant = "0.3"
