--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 metrics = ["lightyear_shared/metrics", "dep:metrics"]
+#prediction = ["bevy-trait-query"]
 
 [dependencies]
 anyhow = "1.0"
@@ -14,6 +15,12 @@ tracing = "0.1.39"
 bevy = { version = "0.12", default-features = false}
 metrics = { version = "0.21", optional = true }
 chrono = "0.4.31"
+atomic_enum = "0.2"
+
+
+
+bevy-trait-query = "0.4.0"
+#bevy-trait-query = { version = "0.4.0", optional = true}
 
 [dev-dependencies]
 mock_instant = "0.3"
