--- a/shared/derive/Cargo.toml
+++ b/shared/derive/Cargo.toml
@@ -24,6 +24,7 @@ lightyear_shared =  { path = ".." }
 enum-as-inner = "0.6.0"
 bevy = { version = "0.12", default-features = false}
 enum_delegate = "0.2"
+derive_more = { version = "0.99", features = ["add", "mul"] }
 
 
 
