--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -35,6 +35,7 @@ derive_more = { version = "0.99", features = ["add", "mul"] }
 mock_instant = "0.3"
 
 metrics-exporter-prometheus = {  version = "0.12.1", optional = true }
+bevy-inspector-egui = "0.21.0"
 
 [dev-dependencies]
 clap = { version = "4.4", features = ["derive"] }
