add github actions for lint/test/etc.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,7 +48,7 @@ jobs:
         run: cargo clippy --no-deps --tests -- -D warnings
 
       - name: Rustdoc
-        run: cargo rustdoc -- -D warnings
+        run: cargo rustdoc -p lightyear_shared -- -D warnings
 
   doctest:
     name: Doctest
@@ -73,7 +73,7 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@v4
 
-      - name: Instal stable toolchain
+      - name: Install stable toolchain
         uses: dtolnay/rust-toolchain@stable
 
       - name: Cache crates
