--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -67,8 +67,10 @@ rand = "0.8"
 ringbuffer = "0.15"
 bevy = { version = "0.12", default-features = false }
 taplo-cli = "0.8.1"
+derive_more = "0.99.17"
 
 [dev-dependencies]
+derive_more = { version = "0.99", features = ["add", "mul"] }
 mock_instant = { version = "0.3.1" }
 tracing-subscriber = "0.3.17"
 bitvec = "1.0"
