--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install alsa
-        run: sudo apt-get install -y libasound2-dev; sudo apt-get install -y libwebkit2gtk-4.0 ;
+        run: sudo apt-get install -y libasound2-dev libwebkit2gtk-4.0 pkg-config libusb-1.0-0-dev libftdi1-dev libudev-dev;
 
       - name: Clone repo
         uses: actions/checkout@v4
@@ -58,7 +58,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install alsa
-        run: sudo apt-get install -y libasound2-dev; sudo apt-get install -y libwebkit2gtk-4.0 ;
+        run: sudo apt-get install -y libasound2-dev libwebkit2gtk-4.0 pkg-config libusb-1.0-0-dev libftdi1-dev libudev-dev;
 
       - name: Clone repo
         uses: actions/checkout@v4
