--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -63,7 +63,7 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@v4
 
-      - name: Instal stable toolchain
+      - name: Install stable toolchain
         uses: dtolnay/rust-toolchain@stable
 
       - name: Cache crates
