--- a/book/book.toml
+++ b/book/book.toml
@@ -4,3 +4,10 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Lightyear cheatbook"
+
+[preprocessor]
+
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
+
+[output]
