--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -13,6 +13,8 @@ metrics = [
   "tokio",
 ]
 mock_time = ["dep:mock_instant"]
+webtransport = ["dep:wtransport", "tokio/sync", "wtransport/dangerous-configuration"]
+#webtransport = ["dep:wtransport", "tokio/sync"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -26,6 +28,12 @@ thiserror = "1.0.50"
 paste = "1.0"
 cfg-if = "1.0"
 mock_instant = { version = "0.3.1", optional = true }
+
+# transport
+#webtransport-quinn = { version = "0.6.1", optional = true }
+wtransport = { version = "0.1.8", optional = true}
+#webtransport-quinn = { version = "0.6.1"}
+quinn = { version = "0.10.2"}
 
 
 # serialization
@@ -62,6 +70,7 @@ metrics-exporter-prometheus = { version = "0.12.1", optional = true, default-fea
   "http-listener",
 ] }
 tokio = { version = "1.33", features = ["rt", "net", "time"], optional = true }
+#tokio = { version = "1.33", features = ["rt", "net", "sync", "time"]}
 
 rand = "0.8"
 ringbuffer = "0.15"
