--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -50,4 +50,4 @@ clap = { version = "4.4", features = ["derive"] }
 mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.12.1", optional = true }
 bevy-inspector-egui = "0.21.0"
-tokio = "1.33.0"
+tokio = { version = "1.34.0", features = ["rt", "macros"] }
