--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,6 +76,9 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - name: Install packages
+        run: sudo apt-get update && sudo apt-get install -y libasound2-dev pkg-config libusb-1.0-0-dev libftdi1-dev libudev-dev;
+        
       - name: Clone repo
         uses: actions/checkout@v4
 
