--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -13,7 +13,15 @@ metrics = [
   "tokio",
 ]
 mock_time = ["dep:mock_instant"]
-webtransport = ["dep:wtransport", "tokio/sync", "wtransport/dangerous-configuration", "dep:ring", "dep:base64", "dep:rcgen", "dep:time"]
+webtransport = [
+  "dep:wtransport",
+  "tokio/sync",
+  "wtransport/dangerous-configuration",
+  "dep:ring",
+  "dep:base64",
+  "dep:rcgen",
+  "dep:time",
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -31,17 +39,17 @@ mock_instant = { version = "0.3.1", optional = true }
 
 # transport
 # TODO: we are using this version because we need Certificate to be Cloneable. Upgrade when this is merged
-wtransport = { git = "https://github.com/cBournhonesque/wtransport.git", branch = "cb/0.1.8andClone", optional = true}
+wtransport = { git = "https://github.com/cBournhonesque/wtransport.git", branch = "cb/0.1.8andClone", optional = true }
 ring = { version = "0.17.6", optional = true }
 base64 = { version = "0.21.4", optional = true }
-rcgen = { version = "0.11.3", optional = true}
-time = {version = "0.3.1", optional = true}
+rcgen = { version = "0.11.3", optional = true }
+time = { version = "0.3.1", optional = true }
 
 
 # serialization
 bitcode = { git = "https://github.com/cBournhonesque/bitcode.git", branch = "cb/latest", features = [
   "serde",
-]}
+] }
 bytes = { version = "1.5", features = ["serde"] }
 self_cell = "1.0"
 serde = { version = "1.0.188", features = ["derive"] }
@@ -59,7 +67,7 @@ tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.17", features = [
   "registry",
   "env-filter",
-]}
+] }
 
 # server
 crossbeam-channel = { version = "0.5.8", features = [] }
