--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -1,7 +1,16 @@
 [package]
 name = "lightyear"
 version = "0.1.0"
+authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
 edition = "2021"
+rust-version = "1.65"
+description = "Server-client networking library for the Bevy game engine"
+readme = "README.md"
+repository = "https://github.com/cBournhonesque/lightyear"
+keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
+categories = ["game-development", "network-programming"]
+license = "MIT OR Apache-2.0"
+exclude = ["/tests"]
 
 [features]
 debug = []
@@ -23,19 +32,20 @@ webtransport = [
   "dep:time",
 ]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 
 [dependencies]
 # utils
 anyhow = "1.0"
 chrono = "0.4.31"
+cfg-if = "1.0"
+derive_more = "0.99.17"
 enum_delegate = "0.2"
 enum_dispatch = "0.3"
-thiserror = "1.0.50"
-paste = "1.0"
-cfg-if = "1.0"
 mock_instant = { version = "0.3.1", optional = true }
+paste = "1.0"
+rand = "0.8"
+ringbuffer = "0.15"
+thiserror = "1.0.50"
 
 # transport
 # TODO: we are using this version because we need Certificate to be Cloneable. Upgrade when this is merged
@@ -44,7 +54,6 @@ ring = { version = "0.17.6", optional = true }
 base64 = { version = "0.21.4", optional = true }
 rcgen = { version = "0.11.3", optional = true }
 time = { version = "0.3.1", optional = true }
-
 
 # serialization
 bitcode = { git = "https://github.com/cBournhonesque/bitcode.git", branch = "cb/latest", features = [
@@ -79,13 +88,9 @@ metrics-tracing-context = { version = "0.14", optional = true }
 metrics-exporter-prometheus = { version = "0.12.1", optional = true, default-features = false, features = [
   "http-listener",
 ] }
-tokio = { version = "1.33", features = ["rt", "net", "time"], optional = true }
-#tokio = { version = "1.33", features = ["rt", "net", "sync", "time"]}
+tokio = { version = "1.34", features = ["rt", "net", "time"], optional = true }
 
-rand = "0.8"
-ringbuffer = "0.15"
 bevy = { version = "0.12", default-features = false }
-derive_more = "0.99.17"
 
 
 [dev-dependencies]
