--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,9 +1,16 @@
 [package]
 name = "lightyear_macros"
 version = "0.1.0"
+authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+rust-version = "1.65"
+description = "Procedural macros for the lightyear networking library"
+readme = "README.md"
+repository = "https://github.com/cBournhonesque/lightyear"
+keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
+categories = ["game-development", "network-programming"]
+license = "MIT OR Apache-2.0"
+exclude = ["/tests"]
 
 [lib]
 proc-macro = true
