--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -49,7 +49,7 @@ thiserror = "1.0.50"
 
 # transport
 # TODO: we are using this version because we need Certificate to be Cloneable. Upgrade when this is merged
-wtransport = { git = "https://github.com/cBournhonesque/wtransport.git", branch = "cb/0.1.8andClone", optional = true }
+wtransport = { git = "https://github.com/BiagioFesta/wtransport.git", branch = "master", optional = true }
 ring = { version = "0.17.6", optional = true }
 base64 = { version = "0.21.4", optional = true }
 rcgen = { version = "0.11.3", optional = true }
