add vendored crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
 [workspace]
 resolver = "2"
-members = ["examples", "macros", "lightyear"]
+members = [
+    "examples", "macros", "lightyear",
+    "vendor/wtransport/wtransport",
+    "vendor/bitcode"
+]
