--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -49,16 +49,20 @@ thiserror = "1.0.50"
 
 # transport
 # TODO: we are using this version because we need Certificate to be Cloneable. Upgrade when this is merged
-wtransport = { git = "https://github.com/BiagioFesta/wtransport.git", branch = "master", optional = true }
+wtransport = { path = "../vendor/wtransport/wtransport", optional = true }
+#wtransport = { git = "https://github.com/BiagioFesta/wtransport.git", branch = "master", optional = true }
 ring = { version = "0.17.6", optional = true }
 base64 = { version = "0.21.4", optional = true }
 rcgen = { version = "0.11.3", optional = true }
 time = { version = "0.3.1", optional = true }
 
 # serialization
-bitcode = { git = "https://github.com/cBournhonesque/bitcode.git", branch = "cb/latest", features = [
+bitcode = { path = "../vendor/bitcode", features = [
   "serde",
 ] }
+#bitcode = { git = "https://github.com/cBournhonesque/bitcode.git", branch = "cb/latest", features = [
+#  "serde",
+#] }
 bytes = { version = "1.5", features = ["serde"] }
 self_cell = "1.0"
 serde = { version = "1.0.188", features = ["derive"] }
