--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ members = [
   "vendor/wtransport/wtransport-proto",
   "vendor/bitcode",
 ]
+default-members = [
+  "examples",
+  "macros",
+  "lightyear",
+]
