--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -93,7 +93,12 @@ metrics-tracing-context = { version = "0.14", optional = true }
 metrics-exporter-prometheus = { version = "0.12.1", optional = true, default-features = false, features = [
   "http-listener",
 ] }
-tokio = { version = "1.34", features = ["rt", "rt-multi-thread", "net", "time"], optional = true }
+tokio = { version = "1.34", features = [
+  "rt",
+  "rt-multi-thread",
+  "net",
+  "time",
+], optional = true }
 
 bevy = { version = "0.12", default-features = false }
 
