build pass. added RoomPlugin

--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -27,12 +27,7 @@ webtransport = [
   "tokio/sync",
   "wtransport/dangerous-configuration",
 ]
-wtransport-cert = [
-  "dep:ring",
-  "dep:base64",
-  "dep:rcgen",
-  "dep:time",
-]
+wtransport-cert = ["dep:ring", "dep:base64", "dep:rcgen", "dep:time"]
 
 
 [dependencies]
