add scope management via rooms. Also make sure the inserts/removals/updates of an entity are each sent in the same packet. Fix some replication issues

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -13,6 +13,9 @@ license = "MIT OR Apache-2.0"
 exclude = ["/tests"]
 publish = false
 
+[[example]]
+name = "interest_management"
+path = "interest_management/main.rs"
 
 [[example]]
 name = "simple_box"
