--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -22,6 +22,7 @@ metrics = [
   "tokio",
 ]
 mock_time = ["dep:mock_instant"]
+render = ["bevy/bevy_render"]
 webtransport = [
   "dep:wtransport",
   "tokio/sync",
@@ -62,8 +63,7 @@ chacha20poly1305 = { version = "0.10", features = ["std"] }
 byteorder = "1.5.0"
 
 # derive
-lightyear_macros = { path = "../macros" }
-#lightyear_macros = "0.1.0"
+lightyear_macros = {  version = "0.2.0", path = "../macros" }
 
 # tracing
 tracing = "0.1.40"
@@ -90,7 +90,7 @@ tokio = { version = "1.34", features = [
   "time",
 ], optional = true }
 
-bevy = { version = "0.12", default-features = false }
+bevy = { version = "0.12", default-features = false}
 
 
 [dev-dependencies]
