--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -27,6 +27,12 @@ webtransport = [
   "dep:wtransport",
   "tokio/sync",
   "wtransport/dangerous-configuration",
+  "dep:xwt",
+  "dep:xwt-core",
+  "dep:web-sys",
+  "web-sys/WebTransport",
+  "web-sys/WebTransportOptions",
+  "dep:futures-lite",
 ]
 
 
@@ -46,6 +52,13 @@ thiserror = "1.0.50"
 
 # transport
 wtransport = { version = "0.1.9", optional = true }
+xwt = { version = "0.3", optional = true }
+xwt-core = { version = "0.2", optional = true }
+web-sys = {  version = "0.3", optional = true, features = [
+  "WebTransport",
+  "WebTransportOptions",
+]}
+futures-lite = {  version = "2.1.0", optional = true }
 
 # serialization
 bitcode = { version = "0.4.0", package = "bitcode_lightyear_patch", features = [
@@ -86,14 +99,16 @@ metrics-exporter-prometheus = { version = "0.12.1", optional = true, default-fea
 tokio = { version = "1.34", features = [
   "rt",
   "rt-multi-thread",
-  "net",
+#  "net",
   "time",
 ], optional = true }
 
 bevy = { version = "0.12", default-features = false }
 
 
+
 [dev-dependencies]
+wasm-bindgen-test = "0.3.39"
 derive_more = { version = "0.99", features = ["add", "mul"] }
 mock_instant = { version = "0.3.1" }
 tracing-subscriber = "0.3.17"
