--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -23,15 +23,29 @@ metrics = [
 ]
 mock_time = ["dep:mock_instant"]
 render = ["bevy/bevy_render"]
+
+#webtransport = [
+#  "dep:wtransport",
+#  "tokio/sync",
+#  "wtransport/dangerous-configuration",
+#  "dep:xwt",
+#  "dep:xwt-core",
+#  "dep:web-sys",
+#  "web-sys/WebTransport",
+#  "web-sys/WebTransportOptions",
+#]
 webtransport = [
-  "dep:wtransport",
-  "tokio/sync",
-  "wtransport/dangerous-configuration",
   "dep:xwt",
   "dep:xwt-core",
-  "dep:web-sys",
-  "web-sys/WebTransport",
-  "web-sys/WebTransportOptions",
+#  "dep:web-sys",
+#  "web-sys/WebTransport",
+#  "web-sys/WebTransportOptions",
+#  "web-sys/WebTransportBidirectionalStream",
+#  "web-sys/WebTransportSendStream",
+#  "web-sys/WebTransportReceiveStream",
+#  "web-sys/ReadableStreamDefaultReader",
+#  "web-sys/WritableStreamDefaultWriter",
+#  "web-sys/WebTransportDatagramDuplexStream",
   "dep:futures-lite",
 ]
 
@@ -54,11 +68,8 @@ thiserror = "1.0.50"
 wtransport = { version = "0.1.9", optional = true }
 xwt = { version = "0.3", optional = true }
 xwt-core = { version = "0.2", optional = true }
-web-sys = {  version = "0.3", optional = true, features = [
-  "WebTransport",
-  "WebTransportOptions",
-]}
-futures-lite = {  version = "2.1.0", optional = true }
+xwt-web-sys = "0.3.1"
+
 
 # serialization
 bitcode = { version = "0.4.0", package = "bitcode_lightyear_patch", features = [
@@ -105,6 +116,19 @@ tokio = { version = "1.34", features = [
 
 bevy = { version = "0.12", default-features = false }
 
+
+[target."cfg(target_family = \"wasm\")".dependencies]
+web-sys = { version = "0.3", optional = true, features = [
+  "WebTransport",
+  "WebTransportOptions",
+  "WebTransportBidirectionalStream",
+  "WebTransportSendStream",
+  "WebTransportReceiveStream",
+  "ReadableStreamDefaultReader",
+  "WritableStreamDefaultWriter",
+  "WebTransportDatagramDuplexStream",
+]}
+futures-lite = {  version = "2.1.0", optional = true }
 
 
 [dev-dependencies]
