--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -52,7 +52,7 @@ path = "prediction_step.rs"
 
 [features]
 metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
-webtransport = ["lightyear/webtransport"]
+webtransport = ["lightyear/webtransport", "dep:tokio"]
 mock_time = ["lightyear/mock_time"]
 
 [dependencies]
@@ -68,6 +68,8 @@ clap = { version = "4.4", features = ["derive"] }
 mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.12.1", optional = true }
 bevy-inspector-egui = "0.21.0"
+
+[target."cfg(not(target_family = \"wasm\"))".dependencies]
 tokio = { version = "1.34", features = [
     "rt",
     "rt-multi-thread",
