--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -70,6 +70,9 @@ metrics-exporter-prometheus = { version = "0.12.1", optional = true }
 bevy-inspector-egui = "0.21.0"
 getrandom = { version = "0.2.11", features = ["js"] }
 base64 = "0.21.5"
+ring = "0.17.7"
+cfg-if = "1.0.0"
+
 
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
 tokio = { version = "1.34", features = [
@@ -78,4 +81,21 @@ tokio = { version = "1.34", features = [
     "net",
     "time",
 ], optional = true }
+
+[target."cfg(target_family = \"wasm\")".dependencies]
+console_error_panic_hook = { version = "0.1.7"}
+ring = { version = "0.16", optional = true }
+web-sys = { version = "0.3", features = [
+    "console",
+    "WebTransport",
+    "WebTransportHash",
+    "WebTransportOptions",
+    "WebTransportBidirectionalStream",
+    "WebTransportSendStream",
+    "WebTransportReceiveStream",
+    "ReadableStreamDefaultReader",
+    "WritableStreamDefaultWriter",
+    "WebTransportDatagramDuplexStream",
+]}
+wasm-bindgen-test = "0.3.39"
 
