--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -14,7 +14,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 lightyear = { version = "0.5.0", path = "../lightyear" }
-
+crossbeam-channel = "0.5.10"
 anyhow = { version = "1.0.75", features = [] }
 bevy = { version = "0.12", features = ["bevy_core_pipeline"] }
 derive_more = { version = "0.99", features = ["add", "mul"] }
