--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -27,6 +27,7 @@ webtransport = [
   "tokio/sync",
   "wtransport/dangerous-configuration",
 ]
+leafwing = ["dep:leafwing-input-manager", "lightyear_macros/leafwing"]
 
 
 [dependencies]
@@ -42,6 +43,10 @@ paste = "1.0"
 rand = "0.8"
 ringbuffer = "0.15"
 thiserror = "1.0.50"
+
+# input
+leafwing-input-manager = { version = "0.11.2", optional = true }
+
 
 # transport
 wtransport = { version = "0.1.9", optional = true }
