--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -35,6 +35,7 @@ leafwing = ["dep:leafwing-input-manager", "lightyear_macros/leafwing"]
 anyhow = "1.0"
 chrono = "0.4.31"
 cfg-if = "1.0"
+const_format = "0.2.32"
 derive_more = "0.99.17"
 enum_delegate = "0.2"
 enum_dispatch = "0.3"
