--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -60,7 +60,8 @@ mock_time = ["lightyear/mock_time"]
 leafwing = ["lightyear/leafwing"]
 
 [dependencies]
-leafwing-input-manager = "0.11.2"
+#leafwing-input-manager = "0.11.2"
+leafwing-input-manager = { path = "../../leafwing-input-manager" }
 lightyear = { path = "../lightyear", features = ["webtransport", "render"] }
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
