improve xpbd example

--- a/examples/leafwing_inputs/Cargo.toml
+++ b/examples/leafwing_inputs/Cargo.toml
@@ -12,11 +12,12 @@ mock_time = ["lightyear/mock_time"]
 
 [dependencies]
 leafwing-input-manager = "0.11.2"
-bevy_xpbd_2d = "0.3.2"
+bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", features = ["serialize"] }
 lightyear = { path = "../../lightyear", features = [
   "webtransport",
   "render",
   "leafwing",
+  "xpbd_2d"
 ] }
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
