--- a/examples/leafwing_inputs/Cargo.toml
+++ b/examples/leafwing_inputs/Cargo.toml
@@ -11,6 +11,7 @@ metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 mock_time = ["lightyear/mock_time"]
 
 [dependencies]
+bevy_framepace = "0.14.1"
 leafwing-input-manager = "0.11.2"
 bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", features = ["serialize"] }
 lightyear = { path = "../../lightyear", features = [
