--- a/examples/leafwing_inputs/Cargo.toml
+++ b/examples/leafwing_inputs/Cargo.toml
@@ -14,12 +14,14 @@ mock_time = ["lightyear/mock_time"]
 bevy_framepace = "0.14.1"
 bevy-fps-counter = "0.3.0"
 leafwing-input-manager = "0.11.2"
-bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", features = ["serialize"] }
+bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", features = [
+  "serialize",
+] }
 lightyear = { path = "../../lightyear", features = [
   "webtransport",
   "render",
   "leafwing",
-  "xpbd_2d"
+  "xpbd_2d",
 ] }
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
