--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -103,7 +103,7 @@ tokio = { version = "1.34", features = [
   "macros",
   "rt",
   # "rt-multi-thread" is only valid in native.
-#  "rt-multi-thread",
+  "rt-multi-thread",
   "sync",
 #  "net",
   "time",
