added xpbd_3d with simple example based on leafwing_input example

--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -13,6 +13,7 @@ license = "MIT OR Apache-2.0"
 exclude = ["/tests"]
 
 [features]
+default = []
 metrics = [
   "dep:metrics",
   "metrics-util",
@@ -29,6 +30,7 @@ webtransport = [
 ]
 leafwing = ["dep:leafwing-input-manager", "lightyear_macros/leafwing"]
 xpbd_2d = ["dep:bevy_xpbd_2d"]
+xpbd_3d = ["dep:bevy_xpbd_3d"]
 
 
 [dependencies]
@@ -50,6 +52,7 @@ leafwing-input-manager = { version = "0.11.2", optional = true }
 
 # physics
 bevy_xpbd_2d = { version = "0.3.3", optional = true }
+bevy_xpbd_3d = { version = "0.3.3", optional = true }
 
 # transport
 wtransport = { version = "0.1.9", optional = true }
