--- a/examples/leafwing_inputs_3d/Cargo.toml
+++ b/examples/leafwing_inputs_3d/Cargo.toml
@@ -15,7 +15,7 @@ bevy_framepace = "0.14.1"
 bevy-fps-counter = "0.3.0"
 bevy_screen_diagnostics = "0.4.0"
 leafwing-input-manager = "0.11.2"
-bevy_xpbd_3d = { version = "0.3.3", features = ["serialize"] }
+bevy_xpbd_3d = { version = "0.3.3", features = ["serialize", "3d", "f32", "parallel"], default-features = false }
 lightyear = { path = "../../lightyear", features = [
   "webtransport",
   "render",
